# black-library-db

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: docker.cmake
ext/: CMakeLists.txt
include/: BlackLibraryDB.h  BlackLibraryDB.hh  BlackLibraryDBConnectionInterface.h  BlackLibraryDBConnectionInterface.hh  BlackLibraryDBConnectionInterfaceUtils.h  BlackLibraryDBConnectionInterfaceUtils.hh  BlackLibraryDBDataTypes.h  BlackLibraryDBInterface.hh  DBConnectionInterface.h  DBConnectionInterfaceUtils.h  SQLiteDB.h  SQLiteDB.hh
src/: BlackLibraryDB.cc  BlackLibraryDBConnectionInterface.cc  BlackLibraryDBInterface.cc  CMakeLists.txt  SQLiteDB.cc  blacklibrarydb.cc  db_driver.cc
test/: CMakeLists.txt  DBTestUtils.h  db_test.cc  sqlite_db_test.cc
tools/docker/: bl_db_builder.docker  bl_db_builder_minimal.docker
tools/sqlite3/: README.md  Schema.sql  setup_db.sh
